--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <header>
-      <div id="header w-3 bg-black">
-        <h1
-          class="text-3xl font-bold uppercase text-center my-7 text-orange-600"
-        >
+  <body class="mt-0 bg-gray-400">
+    <header class="w-full h-96 bg-black">
+      <div id="header" class="text-center">
+        <h1 class="text-5xl font-bold uppercase text-orange-600 pt-36">
           welcome to sports world
         </h1>
       </div>
     </header>
-    <main></main>
-    <script src="../src/js/sports.js"></script>
+    <main>
+      <div id="top-games" class="grid grid-cols-3"></div>
+      <div>
+        <h3 id="game-title"></h3>
+      </div>
+    </main>
+    <script src="../js/sports.js"></script>
   </body>
 </html>
