--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,11 +14,14 @@
       </div>
     </header>
     <main>
-      <div id="top-games" class="grid grid-cols-3"></div>
-      <div>
-        <h3 id="game-title"></h3>
-      </div>
+      
+
+      <div
+        id="top-games"
+        class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
+      ></div>
     </main>
+    <div id="game-detail"></div>
     <script src="../js/sports.js"></script>
   </body>
 </html>
