--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,14 +14,61 @@
       </div>
     </header>
     <main>
-      
-
       <div
         id="top-games"
         class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
       ></div>
+      <div
+        id="game-detail2"
+        class="hidden z-10"
+        aria-labelledby="modal-title"
+        role="dialog"
+        aria-modal="true"
+      >
+        <div class="fixed inset-0 z-10 overflow-y-auto">
+          <div
+            class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0"
+          >
+            <div
+              class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg"
+            >
+              <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                <div class="sm:flex sm:items-start">
+                  <div
+                    id="game-icon"
+                    class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10"
+                  ></div>
+                  <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                    <h3
+                      class="text-lg font-medium leading-6 text-gray-900"
+                      id="game-title"
+                    >
+                      Deactivate account
+                    </h3>
+                    <div class="mt-2">
+                      <p
+                        id="game-detail-field"
+                        class="text-sm text-gray-500"
+                      ></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="bg-gray-50 px-4 py-3 sm:px-6">
+                <button
+                  type="button"
+                  onclick="hiddenFunction()"
+                  class="mt-3 inline-flex w-full justify-center bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <div id="game-detail"></div>
+
     <script src="../js/sports.js"></script>
   </body>
 </html>
