index dir change

--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
       </div>
     </main>
 
-    <script src="../js/sports.js"></script>
+    <script src="./src/js/sports.js"></script>
   </body>
 </html>
